llm-sim/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: llm-sim
  name: llm-sim
spec:
  finalizers:
  - kubernetes
